sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:14: error: ';' expected but 'else' found.
        else  {
        ^